--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>vue</title>
   </head>
-  <body>
+  <body style="background:rgba(204,255,204,.2)">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
