--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue</title>
+    <title>vue+node+mongodb</title>
+    <link href="./static/favicon.ico" rel="shortcut icon">
   </head>
   <body style="background:#f4f5f5">
     <div id="app"></div>
